tests/transpiler/x/java/avg_builtin.error
exit status 1
Main.java:4: error: cannot find symbol
        System.out.println(avg(new int[]{1, 2, 3}));
                           ^
  symbol:   method avg(int[])
  location: class Main
1 error
