tests/transpiler/x/java/avg_builtin.java
public class Main {
    public static void main(String[] args) {
        System.out.println(avg(new int[]{1, 2, 3}));
    }
}
